--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,25 @@
 /*headings and logo*/
 h1, h2 {font-family: 'Times New Roman', Times, serif;
     text-transform: capitalize;
-    letter-spacing: 4px;
+    letter-spacing: 2.5px;
     color: #252525;}
 #logo{ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     float: left;
-    font-size: 280%;
-    margin-left: 30px;
+    font-size: 300%;
+    margin-left: 35px;
+    margin-top: auto;
     }
     
+    /* navigation links */
+#menu {font-size: 110%;
+    letter-spacing: 4px;}
+#menu , #logo {line-height: 90px;
+    }
+#menu li {float: right;
+    list-style: none;
+    margin-right: 30px;}
+#menu a {text-decoration: none;
+    color: inherit;}
     
+#menu a:hover {border-bottom:1px solid #3a3a3a;}
+    .active{border-bottom: 1px solid#3a3a3a;}
