--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,11 +31,23 @@ h1, h2 {font-family:'teko', 'Arial Narrow', Arial, sans-serif;
     .active{border-bottom: 1px solid#3a3a3a;}
 
     /* hero image */
-#hero-outer {height: 870px;
+#hero-outer {height: 600px;
     width: 100%;
     overflow: hidden;
     position: relative;}    
 #hero-image {height: 100%;
     width: 100%;
-    background:url('../images/catmosphere-interior-hero-image.jpg')
-    no-repeat center center}
+    background:url('../images/cafe-interior.jpg')
+    no-repeat center center }
+
+    section h1  {font-family: 'fredoka one', 'Arial Narrow', Arial, sans-serif;
+    font-size: 65px;
+    left: 0;
+    line-height: 200px;
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+    color: antiquewhite;
+}
