--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Teko&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Fredoka:wght@300&display=swap'); 
 /* background */
 body {
     background-color:bisque;
   }
 /* headings and logo */
-h1, h2 {font-family:'teko', 'Arial Narrow', Arial, sans-serif;
-    text-transform: capitalize;
-    letter-spacing: 2.5px;
-    color: #534e45;}
+
 #logo{ font-family: 'fredoka one', 'Arial Narrow', Arial, sans-serif;
     float: left;
     font-size: 550%;
     margin-left: 35px;
     margin-top: auto;
     letter-spacing: 0px;
+    color: #534e45;
+    
     }
     
     /* navigation */
 #menu {font-size: 150%;
-    letter-spacing: 3px;}
+    letter-spacing: 3px;
+    height: 25px;}
 #menu , #logo {line-height: 90px;
     }
 #menu li {float: right;
     list-style:none;
-    margin-right: 20px;}
+    margin-right: 30px;}
 #menu a {text-decoration:none;
     color: inherit;}
+h2{font-family:'fredoka one', 'Arial Narrow', Arial, sans-serif;color: #534e45 ; text-transform: uppercase;}
     
 #menu a:hover {border-bottom:1px solid #3a3a3a;}
     .active{border-bottom: 1px solid#3a3a3a;}
@@ -37,17 +38,34 @@ h1, h2 {font-family:'teko', 'Arial Narrow', Arial, sans-serif;
     position: relative;}    
 #hero-image {height: 100%;
     width: 100%;
-    background:url('../images/cafe-interior.jpg')
+    background:url('../images/beans.jpg')
     no-repeat center center }
 
-    section h1  {font-family: 'fredoka one', 'Arial Narrow', Arial, sans-serif;
-    font-size: 65px;
-    left: 0;
-    line-height: 200px;
-    margin-top: -100px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
+    /* about us section*/
+hr{border-top: 1px solid #3a3a3a;
     width: 100%;
-    color: antiquewhite;
-}
+    margin: 3px 0;}
+div>h2{font-size: 445%;
+    float: left;}
+p {font-family:'fredoka', 'Arial Narrow', Arial, sans-serif;
+    font-size:300% ;
+    color: #3a3a3a;}
+section>h2{float:left 50%;}
+
+/*menu picture and text*/
+#content .col {
+    float: left;
+  }
+  
+  #footer {
+    clear: left;
+  }
+
+/* social links*/
+.social-networks {text-align: center;}
+    .social-networks > li {display: inline;}
+    .social-networks i {font-size: 360%;   
+    margin: 1%;
+    padding:5%;
+    color: #ffffff}
+footer{background-image:url('../images/beans.jpg');}  
