--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,14 +50,14 @@ h2{font-family:'fredoka one', 'Arial Narrow', Arial, sans-serif;color: #534e45 ;
   no-repeat center center }  
 #hero-image-book-in {height: 100%;
       width: 100%;
-      background:url('../images/cat-8.jpg')
+      background:url('../images/book-hero.jpg')
       no-repeat center center }  
 
 /* about us section*/
 hr{border-top: 1px solid #3a3a3a;
     width: 100%;
     margin: 3px 0;}
-div>h2{font-size: 10rem;
+div>h2{font-size: 8rem;
     float: left;}
 p {font-family:'fredoka', 'Arial Narrow', Arial, sans-serif;
     font-size:300% ;
@@ -79,6 +79,7 @@ padding-top: 50px;}
 #photos >img {width: 100%;}
 
 /*cafe menu*/
+
 .text-center {
   text-align: center;
 }
@@ -105,7 +106,7 @@ padding-top: 50px;}
   padding: 25px 50px 25px 50px;
   background-color: rgba(0, 0, 0, 0.366);
   color: white;
-  border: 6px solid rgb(74, 31, 31);
+  border: 6px solid rgb(174, 174, 174);
  
 }
 
