--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h2{font-family:'fredoka one', 'Arial Narrow', Arial, sans-serif;color: #534e45 ;
     position: relative;}    
 #hero-image {height: 100%;
     width: 100%;
-    background:url('../images/cafe-interior.jpg')
+    background:url('../images/index-hero.jpg')
     no-repeat center center }
 #hero-image-gallery {height: 100%;
       width: 100%;
@@ -107,6 +107,7 @@ padding-top: 50px;}
   background-color: rgba(0, 0, 0, 0.366);
   color: white;
   border: 6px solid rgb(174, 174, 174);
+  border-radius: 25px;
  
 }
 
