added map to home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,9 +54,10 @@ h2{font-family:'fredoka one', 'Arial Narrow', Arial, sans-serif;color: #534e45 ;
       no-repeat center center }  
 
 /* about us section*/
-hr{border-top: 1px solid #3a3a3a;
+hr{border-top: 1px solid #00000041;
     width: 100%;
-    margin: 3px 0;}
+    margin: 3px 0;
+  }
 div>h2{font-size: 8rem;
     float: left;}
 p {font-family:'fredoka', 'Arial Narrow', Arial, sans-serif;
@@ -145,6 +146,13 @@ padding-top: 50px;}
     margin: 1%;
     padding:5%;
     color: #ffffff}
+    .social-network {text-align: center;}
+    .social-network > li {display: inline;}
+    .social-network i {font-size: 360%;   
+    margin: 1%;
+    padding:5%;
+    color: #534e45;
+    }
 footer{background-image:url('../images/beans.jpg');}  
 
 /*booking form*/
