--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h2{font-family:'fredoka one', 'Arial Narrow', Arial, sans-serif;color: #534e45 ;
   max-width: 100vw;
     width: 100%;
     overflow: hidden;
-    position: ;}    
+    position:center;}    
 #hero-image {height: 100%;
     width: 100%;
     background:url('../images/sleeping-cat-hero.jpg')
@@ -175,21 +175,21 @@ form {
     display: block;
     font-family:'fredoka', 'Arial Narrow', Arial, sans-serif;
     padding-bottom: 10px;
-    font-size: 1.25em;
+    font-size: 1em;
   }
   
   input, select, textarea {
     border-radius: 2px;
     border: 2px solid #777;
     box-sizing: border-box;
-    font-size: 1.25em;
+    font-size: 1em;
     font-family: 'fredoka', 'Arial Narrow', Arial, sans-serif;
-    width: 100%;
+    width: 80%;
     padding: 10px;
   }
   
   div.elem-group.inlined input {
-    width: 95%;
+    width: 80%;
     display: inline-block;
   }
   
@@ -222,7 +222,7 @@ form {
     #menu{padding: 20px; margin: 0;
   }
     
-    hr {display: none;}
+    
   }
   /* for medium screen sizes from 950px wide and down */
 @media screen and (max-width: 950px) {
@@ -264,16 +264,17 @@ form {
             height: 400px;}
            }
            #menu{font-size: 0.5rem;}
+           p{font-size: 2rem;}
   @media screen and (max-device-width: 414px)
            and (orientation: portrait) {
              .gfg-div {
-               width: 150px;
+               width: 100px;
                height: 150px;}
                .form {
                 width: 400px;
                 height: 400px;}
-               }
-               #menu{font-size: 0.5rem;}
+               p{font-size: 1.9rem;}
+               #menu{font-size: 0.5rem;}}
   @media screen and (min-device-width: 320px)
            and (-webkit-min-device-pixel-ratio: 2) {
              .gfg-div {
