--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,14 +248,14 @@ form {
       #photos {
           column-count: 2;}
        }
-  @media screen and (min-device-width: 560px)
+  @media screen and (min-width: 560px)
         {
          .form {
            width: 400px;
            height: 400px;}}
            
-  @media screen and (max-device-width: 480px)
-       and (orientation: portrait) {
+  @media screen and (max-width: 480px)
+       {
          .gfg-div {
            width: 200px;
            height: 200px;
@@ -266,8 +266,8 @@ form {
            }
            #menu{font-size: 0.5rem;}
            p{font-size: 2rem;}
-  @media screen and (max-device-width: 414px)
-           and (orientation: portrait) {
+  @media screen and (max-width: 414px)
+           {
              .gfg-div {
                width: 100px;
                height: 150px;}
@@ -276,8 +276,8 @@ form {
                 height: 400px;}
                p{font-size: 1.9rem;}
                #menu{font-size: 0.5rem;}}
-  @media screen and (min-device-width: 320px)
-           and (-webkit-min-device-pixel-ratio: 2) {
+  @media screen and (min-width: 320px)
+           {
              .gfg-div {
                width: 400px;
                height: 400px;}
